# CMakeList.txt : CMake project for comp90025-project2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("comp90025-project2")

# Add source to this project's executable.
add_executable (comp90025-project2 "project2.cpp" "project2.h" "test.cpp" "test2.cpp")

# TODO: Add tests and install targets if needed.
